welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:11: error: illegal start of simple expression
    if (getX()==0) ){
                   ^ZigZag:23: error: Missing closing brace `}' assumed here
} 
^